Fixed spacing problem with pie charts

--- a/src/client/app/graphs/candidate-popup/candidate-popup.css
+++ b/src/client/app/graphs/candidate-popup/candidate-popup.css
@@ -1,5 +1,6 @@
 h1, h2, h3, h4, h5, p {
   font-family: 'Prata', serif;
+
 }
 
 .cand-style {
@@ -8,6 +9,7 @@ h1, h2, h3, h4, h5, p {
   height: 100%;
   font-size: 10px;
   border: solid 3px #BDBBB6;
+  color: #4d4d4d;
 }
 
 
@@ -15,8 +17,6 @@ h1, h2, h3, h4, h5, p {
 .spinner-container {
   position: absolute;
   display: flex;
-  height: 100%;
-  width: 100%;
   z-index: 3;
   align-items: center;
   justify-content: center;
@@ -216,6 +216,7 @@ bar-chart {
 size-pie {
   position: relative;
   width: 100%;
+  height: 33.33%;
   flex-grow: 1;
   margin: 1rem 0 1rem 0;
 }
@@ -223,6 +224,7 @@ size-pie {
 type-pie {
   position: relative;
   width: 100%;
+  height: 33.33%;
   flex-grow: 1;
   margin: 1rem 0 1rem 0;
 }
@@ -230,6 +232,7 @@ type-pie {
 dsgn-pie {
   position: relative;
   width: 100%;
+  height: 33.33%;
   flex-grow: 1;
   margin: 1rem 0 1rem 0;
 }
